@@ -182,6 +182,8 @@ Version 1.3
  - Issue #628 - Update Everspring SP814 Config file from iarmstrong (Justin)
  - Issue #621 - Add Apache License for the cpp/build/sh2ju.sh script from Alteholz (Justin)
  - Issue #585 - Possible fix for Node 0/255 when adding new nodes. (Justin)
+ - Issue #626 & #381 - Fix Segfault when trying to get a Empty/unpopulated
+   ValueList (when we get a ValueAdded Notificiation)
 
 Version 1.2 
  - Released on 15/10/14
